fix spacing

--- a/css/general.css
+++ b/css/general.css
@@ -10,7 +10,7 @@ body{
 
 @media(min-width: 1440px){
 	.topcontainer{
-		height:900px;
+		height:920px;
 	}
 }
 
@@ -39,7 +39,7 @@ body{
 
 @media(max-width: 1100px){
 	.logo>img{
-		height: 200px;
+		height: 150px;
 	}
 }
 
